[package]
name = "ffpb"
version = "0.2.0"
edition = "2024"
description = "Modern progress bar for ffmpeg"
repository = "https://github.com/clitic/ffpb-rs"
documentation = "https://docs.rs/ffpb"
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
ctrlc = "3"
