[package]
name = "ffpb"
version = "0.2.1"
edition = "2024"
description = "A modern, cli progress bar for ffmpeg"
repository = "https://github.com/clitic/ffpb-rs"
documentation = "https://docs.rs/ffpb"
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [".github", "images"]

[dependencies]
ctrlc = "3"
